--- a/resources/assets/sass/partials/_header.scss
+++ b/resources/assets/sass/partials/_header.scss
@@ -87,8 +87,9 @@
                 padding:50px 30px;
                 color:white;
                 transition: all 0.3s linear;
+
                 &:active , &:hover{
-                    background-color:transparent;
+                    background-color:transparent !important;
                     color: $mainColor;
                     border-bottom:3px solid $secondColor;
                 }
@@ -150,7 +151,7 @@
             }
             &:hover{
                 color:$mainColor;
-                background-color: white; 
+                background-color: white;
                 div{
                     width:100%;
                     height: 100%;
