--- a/resources/assets/sass/partials/_about.scss
+++ b/resources/assets/sass/partials/_about.scss
@@ -4,7 +4,7 @@
 	padding-bottom: 40px;
 	.row:first-child{
 		h1{
-			font-size: 52px;
+			font-size: 45px;
 			font-weight: 700;
 			color: #35362F;
 		}
@@ -13,15 +13,16 @@
 		.col-md-4{
 			i{
 				margin-top: 30px;
-				font-size: 4.5em;
+				font-size: 4em;
 				color: #AEBE27;
 			}
 			h3{
-				font-size: 38px;
+				font-size: 30px;
+				min-height: 115px;
 			}
 			p{
-				font-size: 18px;
-				font-weight: 300;
+				font-size: 14px;
+				font-weight: 265;
 			}
 		}
 	}
